# reStrike_VTA

./: .gitignore  Cargo.toml  package-lock.json  package.json
.github/workflows/: ci.yml
docs/: obs_websocket_plugin.md
src/: lib.rs  main.rs  plugin_obs.rs  plugin_store.rs  plugin_store_tests.rs  plugin_udp.rs
tests/: test_obs_plugin.rs
ui/: .eslintrc.json  package-lock.json  package.json  test-sidebar.html  tsconfig.json
ui/coverage/: clover.xml  coverage-final.json  lcov.info
ui/coverage/lcov-report/: index.html
ui/coverage/lcov-report/src/: App.tsx.html  index.html  index.tsx.html
ui/coverage/lcov-report/src/components/: Overlay.tsx.html  index.html
ui/coverage/lcov-report/src/stores/: index.html  index.ts.html
ui/src/: App.css  App.test.tsx  App.tsx
ui/src/components/: Sidebar.tsx
ui/src/hooks/: useSidebar.tsx
ui/src/stores/: index.ts
