[package]
name = "restrike-vta"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
env_logger = "0.11"
thiserror = "1.0"

[[bin]]
name = "main"
path = "src/main.rs"

[dev-dependencies]
tokio-test = "0.4"