[package]
name = "reStrike_VTA"
version = "0.1.0"
edition = "2021"
description = "Overlay and automation toolkit for VTA using Tauri and React"
authors = ["damjanZGB"]
license = "MIT"

[dependencies]
rusqlite = { version = "0.30", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"

[dev-dependencies]
tempfile = "3.0"